SERVER-11617 fixed index bounds for numerical types to support infinity