jstests/indexk.js
@@ -31,8 +31,7 @@ e = t.find({a: {$lt: 5, $gt:2}}).explain();
 assert.eq( 1, e.nscanned );
 assert.eq( 1, e.n );
 // Check that upper bound is low ( < 2 ).
-assert.gt( -1000, e.indexBounds.a[ 0 ][ 0 ] );
-assert.eq( 5, e.indexBounds.a[ 0 ][ 1 ] );
+assert.contains( [ -Infinity, 5 ], e.indexBounds.a );
 
 // Now check cases where no match is possible with a single key index.
 
@@ -40,17 +39,15 @@ assert.eq( 1, t.count({a: {$gt: 5, $lt:2}}) );
 e = t.find({a: {$gt: 5, $lt:2}}).explain();
 assert.eq( 1, e.nscanned );
 assert.eq( 1, e.n );
-assert.eq( 5, e.indexBounds.a[ 0 ][ 0 ] );
 // Check that upper bound is low ( < 2 ).
-assert.lt( 1000, e.indexBounds.a[ 0 ][ 1 ] );
+assert.contains( [ 5, Infinity ], e.indexBounds.a );
 
 assert.eq( 1, t.count({a: {$lt: 2, $gt:5}}) );
 e = t.find({a: {$lt: 2, $gt:5}}).explain();
 assert.eq( 1, e.nscanned );
 assert.eq( 1, e.n );
 // Check that upper bound is large ( > 5 ).
-assert.gt( -1000, e.indexBounds.a[ 0 ][ 0 ] );
-assert.eq( 2, e.indexBounds.a[ 0 ][ 1 ] );
+assert.contains( [ -Infinity, 2 ], e.indexBounds.a );
 
 assert.eq( 1, t.count({a: {$gt: 2}}) );
 assert.eq( 1, t.count({a: {$lt: 5}}) );
